--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="Group_2.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -40,5 +40,6 @@
             </sf:SfSegmentedControl>
         </Grid>
     </Shell.FlyoutFooter>
-
 </Shell>
+
+
